Bug 453371 - textarea accessible name does not show current value when it has a text child, patch=Eitan Isaacson,r=me